<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationUser2"
            android:title="@string/navMenuUser2" />
        <item
            android:id="@+id/navigationUser3"
            android:title="@string/navMenuUser3" />
    <!--</group>

    <group android:checkableBehavior="single">-->
        <item
            android:id="@+id/navigationItem1"
            android:title="@string/navMenuBoard1" />
        <item
            android:id="@+id/navigationItem2"
            android:title="@string/navMenuBoard2" />
    <!--</group>

    <group android:checkableBehavior="single">-->
        <item
            android:id="@+id/navigationUser4"
            android:title="@string/navMenuUser4" />
        <item
            android:id="@+id/navigationUser5"
            android:title="@string/navMenuUser5" />
    </group>

</menu>